--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Momentum App</title>
+  <title>Here's Todo list</title>
   <meta charset="UTF-8" />
 </head>
 
@@ -11,18 +11,18 @@
 
   <form id="login-form">
     <input type="text" placeholder="please login" />
-
   </form>
+  <h2 id="hello"></h2>
+
+
   <h2 class="js-clock"></h2>
 
   <form id="todo-form">
     <input type="text" placeholder="Write a To Do and Press Enter" required />
-    <ul id="todo-list"></ul>
-
-
   </form>
+  <ul id="todo-list"></ul>
 
-  <script src="src/index.js"></script>
+  <script src="src/clock.js"></script>
   <script src="src/todo.js"></script>
 </body>
 
