metric, input size

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <h1>Here's Todo list</h1>
 
   <form id="login-form">
-    <input id="login-id" type="text" placeholder="please login" />
+    <input id="login-id" type="text" placeholder="Type ID and Press Enter to Login" size="50"/>
   </form>
   <div id="loginControl" class="isLogined"><span id="hello"></span> <button type="button">logout</button> </div>
 
   <form id="todo-form">
-    <input type="text" placeholder="Write a To Do and Press Enter" required />
+    <input type="text" placeholder="Write a To Do and Press Enter" size="50" required />
   </form>
   <ul id="todo-list"></ul>
 
